--- a/src/assets/css/scss/globals.scss
+++ b/src/assets/css/scss/globals.scss
@@ -213,6 +213,7 @@ article {
 	.toggle-offcanvas {
 		display: none;
 	}
+	.no-csstransforms3d .nav-open .nav-global { left: 0; }
 	
 	/*-- Presentation --*/
 	
